context hooked up to cart items

--- a/src/index.css
+++ b/src/index.css
@@ -111,12 +111,6 @@ h1 {
   margin-bottom: 1.5rem;
 }
 
-.meal-item-actions button {
-  background-color: #ffc404;
-  border-radius: 4px;
-  padding: 0.5rem 2rem;
-}
-
 .cart h2 {
   margin: 1rem 0;
 }
@@ -125,6 +119,11 @@ h1 {
   list-style: none;
   margin: 0.5rem 0;
   padding: 0;
+}
+
+.modal-heading {
+  display: flex;
+  justify-content: space-between;
 }
 
 .modal-actions {
